--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
   },
   "devDependencies": {},
   "scripts": {
-    "fetch-intel": "node ./utils/fetch-intel.js",
+    "fetch-dev-data": "node ./utils/fetch-dev-data.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
