--- a/package.json
+++ b/package.json
@@ -9,7 +9,12 @@
     "lodash.random": "^3.2.0",
     "pg": "^7.5.0"
   },
-  "devDependencies": {},
+  "devDependencies": {
+    "eslint": "^5.12.0",
+    "eslint-config-airbnb-base": "^13.1.0",
+    "eslint-plugin-import": "^2.14.0",
+    "prettier": "^1.15.3"
+  },
   "scripts": {
     "fetch-dev-data": "node ./utils/fetch-dev-data.js",
     "test": "echo \"Error: no test specified\" && exit 1"
