--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "dependencies": {
     "faker": "^4.1.0",
     "knex": "^0.15.2",
+    "lodash": "^4.17.11",
     "lodash.random": "^3.2.0",
     "pg": "^7.5.0"
   },
