initial commit, seeding complete

--- a/package.json
+++ b/package.json
@@ -11,9 +11,17 @@
     "pg": "^7.8.0"
   },
   "scripts": {
-    "fetch-dev-data": "node ./utils/fetch-dev-data.js"
+    "fetch-dev-data": "node ./utils/fetch-dev-data.js",
+    "setup-dbs": "psql -f ./db/dev-setup.sql && psql -f ./db/test-setup.sql",
+    "seed-dev": "psql -f ./db/dev-setup.sql && knex seed:run",
+    "seed-test": "psql -f ./db/test-setup.sql && NODE_ENV=test knex seed:run",
+    "test-utils": "mocha spec/utils.spec.js"
   },
   "keywords": [],
   "author": "",
-  "license": "ISC"
+  "license": "ISC",
+  "devDependencies": {
+    "chai": "^4.2.0",
+    "mocha": "^6.2.1"
+  }
 }
